--- a/css/article.css
+++ b/css/article.css
@@ -1,5 +1,5 @@
 .wrapper {
-  padding: 0 75px;
+  padding: 0 30px;
   margin: 0 auto;
   max-width: 1770px;
 }
@@ -7,7 +7,6 @@
 .wrapper-min {
   max-width: 1095px;
   margin-left: 0;
-  margin-right: 75px;
 }
 
 .wrapper-min img {
@@ -24,10 +23,65 @@
   color: #525252;
 }
 
-.purchase {
-  margin-bottom: 43px;
+.article {
+  padding-top: 85px;
+  padding-bottom: 75px;
 }
 
-.care {
-  margin-top: 43px;
+.section {
+  margin-bottom: 33px;
+}
+
+.article-list {
+  margin: 0;
+  padding-left: 17px;
+  padding-top: 17px;
+  padding-bottom: 23px;
+}
+
+.article-list__link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.article-img {
+  padding-top: 27px;
+  padding-bottom: 33px;
+}
+
+.section-title {
+  text-decoration: none;
+  /* font-family: Lato, sans-serif; */
+  margin: 0;
+}
+
+.one-title {
+  font-size: 50px;
+  line-height: 65px;
+  font-weight: 700;
+  margin-bottom: 50px;
+}
+
+.two-title,
+.three-title {
+  font-size: 22px;
+  line-height: 33px;
+}
+
+.two-title {
+  font-weight: 700;
+}
+
+.three-title {
+  font-weight: 400;
+}
+
+.paragraph-one {
+  margin-bottom: 33px;
+  margin-top: 0;
+  padding-top: 0;
+}
+
+.paragraph-two {
+  margin: 0;
 }
