--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,40 @@
 @import url("article.css");
 
+/* @font-face {
+  font-family: "Droid Serif";
+  src: local("Droid Serif"), local("Droid-Serif-Regular"), url('../fonts/DroidSerif.woff2') format("woff2"),
+    url('../fonts/DroidSerif.woff') format("woff");
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Droid Serif";
+  src: local("Droid Serif Boold"), local("Droid-Serif-Bold"), url('../fonts/DroidSerif-Bold.woff2') format("woff2"),
+    url('../fonts/DroidSerif-Bold.woff') format("woff");
+  font-weight: 700;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Lato";
+  src: local("Lato"), local("Lato-Regular"), url('../fonts/lato-regular.woff2') format("woff2"),
+    url('../fonts/lato-regular.woff') format("woff");
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Lato";
+  src: local("Lato"), local("Lato-Bold"), url('../fonts/lato-bold.woff2') format("woff2"),
+    url('../fonts/lato-bold.woff') format("woff");
+  font-weight: 700;
+  font-display: swap;
+} */
+
+
 body {
+  /* font-family: "Droid Serif", serif; */
   font-family: -apple-system,
     BlinkMacSystemFont,
     'Segoe UI',
@@ -11,59 +45,10 @@ body {
     'Open Sans',
     'Helvetica Neue',
     sans-serif;
-
+  margin: 0;
   font-weight: 400;
   font-size: 22px;
   line-height: 33px;
   font-weight: 400;
   color: #2d2d2d;
-}
-
-h1,
-h2,
-h3,
-p,
-ol,
-ul {
-  margin: 0;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-p+p {
-  margin-top: 43px;
-}
-
-.section {
-  margin-bottom: 43px;
-}
-
-h1 {
-  font-size: 50px;
-  line-height: 65px;
-  font-weight: 700;
-  margin-top: 88px;
-  margin-bottom: 50px;
-}
-
-h2,
-h3 {
-  font-size: 22px;
-  line-height: 33px;
-}
-
-h2 {
-  font-weight: 700;
-}
-
-h3 {
-  font-weight: 400;
 }
