--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,5 @@
 @import url("article.css");
 
-/* @font-face {
-  font-family: "Droid Serif";
-  src: local("Droid Serif"), local("Droid-Serif-Regular"), url('../fonts/DroidSerif.woff2') format("woff2"),
-    url('../fonts/DroidSerif.woff') format("woff");
-  font-weight: 400;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Droid Serif";
-  src: local("Droid Serif Boold"), local("Droid-Serif-Bold"), url('../fonts/DroidSerif-Bold.woff2') format("woff2"),
-    url('../fonts/DroidSerif-Bold.woff') format("woff");
-  font-weight: 700;
-  font-display: swap;
-}
 
 @font-face {
   font-family: "Lato";
@@ -30,21 +15,12 @@
     url('../fonts/lato-bold.woff') format("woff");
   font-weight: 700;
   font-display: swap;
-} */
+}
 
 
 body {
-  /* font-family: "Droid Serif", serif; */
-  font-family: -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Open Sans',
-    'Helvetica Neue',
-    sans-serif;
+  font-family: Lato, sans-serif;
+  text-decoration: none;
   margin: 0;
   font-weight: 400;
   font-size: 22px;
