--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,27 @@
 @import url("article.css");
 @import url("style.css");
 
-
 @font-face {
-  font-family: "Lato";
-  src: local("Lato"), local("Lato-Regular"), url('../fonts/lato-regular.woff2') format("woff2"),
-    url('../fonts/lato-regular.woff') format("woff");
+  font-family: "Arial";
+  src: local("Arial"), local("Arial-Regular"), url('../fonts/Arial.woff2') format("woff2"),
+    url('../fonts/Arial.woff') format("woff");
   font-weight: 400;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Lato";
-  src: local("Lato"), local("Lato-Bold"), url('../fonts/lato-bold.woff2') format("woff2"),
-    url('../fonts/lato-bold.woff') format("woff");
+  font-family: "Arial-Bold";
+  src: local("Arial-Bold"), url('../fonts/Arial-Bold.woff2') format("woff2"),
+    url('../fonts/Arial-Bold.woff') format("woff");
   font-weight: 700;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Arial-Black";
+  src: local("Arial-Black"), url('../fonts/Arial-Black.woff2') format("woff2"),
+    url('../fonts/Arial-Black.woff') format("woff");
+  font-weight: 900;
   font-display: swap;
 }
 
@@ -35,13 +42,12 @@ html {
 }
 
 body {
-  font-family: Lato, sans-serif;
+  font-family: Arial, sans-serif;
   text-decoration: none;
   margin: 0;
   font-weight: 400;
   font-size: 22px;
   line-height: 33px;
-  font-weight: 400;
   color: #2d2d2d;
 }
 
